--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-body{
+body {
 	margin: 0;
 	padding: 0;
-
 	font-family: "PT Sans", Arial, sans-serif;
 	text-transform: uppercase;
 	font-size: 14px;
@@ -13,8 +12,8 @@ body{
 	width: 1200px;
 	height: auto;
 	margin: 0 auto;
-	-webkit-box-shadow: 0 0 6px 5px rgba(0,0,0,0.1);
-	        box-shadow: 0 0 6px 5px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0 0 15px 3px rgba(0,0,0,0.1);
+	        box-shadow: 0 0 15px 3px rgba(0,0,0,0.1);
 }
 .main-header {
 	width: 1200px;
@@ -26,9 +25,6 @@ body{
 	font-size: 14px;
 	font-weight: bold;
 	color: black;
-	-webkit-transition: 0.2s;
-	-o-transition: 0.2s;
-	transition: 0.2s;
 }
 .site-navigation a:hover {
 	color: #81b3d2;
@@ -41,14 +37,12 @@ body{
 	color: #766357;
 	font-weight: bold;
 }
-
 .site-navigation,
 .real-city-list,
 .features-list,
 .bridge-list,
 .mini-info-list,
 .social-list,
-
 /** hostel.html **/
 .selection-list-1,
 .selection-list-2,
@@ -84,22 +78,39 @@ body{
 	-webkit-box-flex: 1;
 	    -ms-flex-positive: 1;
 	        flex-grow: 1;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
 	width: 20%;
 	height: 56px;
 }
+.site-navigation li:first-child,
+.site-navigation li:nth-child(2) {
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
+}
+.site-navigation li:nth-child(3),
+.site-navigation li:last-child {
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
+}
 .site-navigation-item:nth-child(3) {
 	margin-left: 20%;
+}
+.site-navigation-item:first-child a, 
+.site-navigation-item:nth-child(2) a {
+	padding-left: 72px;
+}
+.site-navigation-item:nth-child(3) a, 
+.site-navigation-item:last-child a {
+	padding-right: 72px;
 }
 .site-navigation-item:last-child a {
 	padding-left: 14px;
 }
-.index-logo img{
+.index-logo img {
 	display: block;
 }
 .index-logo {
@@ -130,7 +141,7 @@ body{
 	display: block;
 	width: 1200px;
 	height: 506px;
-	background-color: #123;
+	background-color: #b5b4b7;
 	background: url("../img/welcome1.jpg") no-repeat center;
 	background-position: 0 29%;
 }
@@ -162,6 +173,20 @@ body{
 .main-title p { 
 	padding-top: 25px;
 }
+.main-title div {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+}
+.main-title h2 {
+	display: block;
+	width: 442px;
+	min-height: 20px;
+	margin: auto;
+}
 .container h2,
 .container p {
 	margin: 0;
@@ -179,6 +204,32 @@ body{
 .bridge-item {
 	padding-top: 47px;
 } 
+.real-city-item div {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+}
+.real-city-item h2 {
+	width: 124px;
+}
+.real-city-item-text {
+	width: 283px;
+}
+.real-city-img {
+	display: block;
+	width: 800px;
+	height: 256px;
+	background-color: #a9897c;
+}
+.bridge-img {
+	display: block;
+	width: 800px;
+	height: 256px;
+	background-color: #bb8b70;	
+}
 .slider img,
 .real-city-img img,
 .bridge-img img,
@@ -187,7 +238,7 @@ body{
 }
 .real-city-info,
 .bridge-info {
-	width: 100%;
+	width: 400px;
 }
 .number {
 	padding: 24px 0 21px;
@@ -199,6 +250,17 @@ body{
 .bridge p {
 	color: #ffffff;
 	line-height: 21px;
+}
+.bridge-item div {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+}
+.bridge-item-text {
+	width: 306px;
 }
 .mini-info h2,
 .mini-info p {
@@ -221,13 +283,24 @@ body{
 	        flex-grow: 1;
 	padding-top: 60px;
 }
-.features-item div {
+.features-item div:first-child {
 	display: inline-block;
 	height: 76px;
 	vertical-align: bottom;
 }
 .features-item h2 {
 	padding: 25px 0 24px;
+}
+.features-item div:last-child {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+}
+.features-item p {
+	width: 286px;
 }
 .features-item {
 	line-height: 21px;
@@ -258,8 +331,23 @@ body{
 	    -ms-flex-positive: 1;
 	        flex-grow: 1;
 }
+.mini-info-item div {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+}
 .mini-info-item h2 {
+	width: 120px;
 	padding-top: 48px;
+}
+.mini-info-item-text {
+	width: 264px;	
+}
+.mini-info-item:last-child .mini-info-item-text{
+	width: 255px;	
 }
 /****************/
 .interested {
@@ -272,7 +360,6 @@ body{
 	font-size: 30px;
 	line-height: 36px;
 	padding-top: 48px;
-
 }
 .interested p {
 	font-size: 14px;
@@ -298,7 +385,6 @@ body{
 .search-hostel-btn:hover {
 	background-color: #604e43;
 }
-
 .search-hostel-btn:focus {
 	background-color: #503e33;
 }
@@ -322,7 +408,6 @@ body{
 	top: 200px;
 	left: 50%;
 	margin-left: -285px;
-
 	display: none;
 	width: 570px;
 	height: 90px;
@@ -424,7 +509,6 @@ body{
 	30%, 70% { -webkit-box-shadow: 0 0 6px 0 #CD1F27; box-shadow: 0 0 6px 0 #CD1F27; }
 	50% { -webkit-box-shadow: 0 0 10px 0 #CD1F27; box-shadow: 0 0 10px 0 #CD1F27; }
 }
-
 .opacity-zero {
 	visibility: hidden;
 }
@@ -495,40 +579,35 @@ body{
 .departure input {
 	width: 346px;
 }
-
 .arrival-input {
 	-webkit-animation: inputBorder 1s;
 	        animation: inputBorder 1s;
 }
-
-.arrival svg {
+.svg-button {
+	border: 0;
+	height: 36px;
+	background-color: transparent;
 	position: absolute;
-	top: 62px;
-	right: 65px;
+	right: 57px;
 	fill: #cacaca;
+	padding-left: 8px;
+	padding-right: 8px;
+}
+.svg-button .btn-arrival {
+	top: 55px;
+}
+.svg-button .btn-departure {
+	top: 126px;
+}
+.svg-button svg {
 	-webkit-transition: 0.2s;
 	-o-transition: 0.2s;
 	transition: 0.2s;
 }
-.arrival svg:hover {
+.svg-button:hover svg {
 	fill: #666666;
 }
-.arrival svg:active {
-	fill: #81b3d2;
-}
-.departure svg {
-	position: absolute;
-	top: 126px;
-	right: 65px;
-	fill: #cacaca;
-	-webkit-transition: 0.2s;
-	-o-transition: 0.2s;
-	transition: 0.2s;	
-}
-.departure svg:hover {
-	fill: #666666;
-}
-.departure svg:active {
+.svg-button:active svg {
 	fill: #81b3d2;
 }
 .adults-children .adults,
@@ -577,7 +656,6 @@ body{
 	width: 12px;
 	height: 3px;
 	background-color: #a9a9a9;
-
 	position: absolute;
 	top: 50%;
 	margin-top: -2px;
@@ -661,6 +739,7 @@ body{
 	display: block;
 	width: 1200px;
 	min-height: 596px;
+	background-color: #cbdda9;
 	background: url(../img/map.jpg) no-repeat center;
 	background-size: 143%;
 	background-position-y: -155px;
@@ -747,7 +826,6 @@ body{
 .social-item:last-child {
 	margin-right: 0;
 }
-
 .twitter-svg,
 .fb-svg,
 .youtube-svg {
@@ -903,12 +981,25 @@ body{
 	background-color: #ffffff;
 	border-bottom: 1px solid #e5e5e5;
 }
-.found-item > img {
-	padding: 30px 30px 30px 72px;
+.found-item-img {
+	display: block;
+	width: 135px;
+	height: 90px;
+	margin: 30px 30px 30px 72px;
+}
+.fi-img-001 {
+	background-color: #862b3c;
+}
+.fi-img-002 {
+	background-color: #c9d9ee;
+}
+.fi-img-003 {
+	background-color: #9cb372;
 }
 .found-item h2 {
 	display: inline-block;
 	line-height: 26px;
+	vertical-align: middle;
 	-webkit-transition: 0.4s;
 	-o-transition: 0.4s;
 	transition: 0.4s;
@@ -995,13 +1086,13 @@ body{
 	margin-left: 6px;
 }
 .mark {
-	display: inline-block;
 	padding: 3px 13px 3px 15px;
 	background-color: #f2f2f2;
 	color: #666666;
 }
 /*********** Инфраструктура ************/
 .selection {
+	background-color: #6b7077;
 	background: url("../img/filter-background.jpg") no-repeat center;
 }
 .selection-form {
@@ -1067,7 +1158,7 @@ body{
 	z-index: 1;
 }
 .form-block .cb-off {
-	display: inline-block;
+	display: block;
 }
 .form-block .cb-on {
 	display: none;
@@ -1087,7 +1178,7 @@ body{
 	display: none;
 }
 .visually-hidden:checked ~ .cb-on {
-	display: inline-block;
+	display: block;
 }
 .visually-hidden:focus ~ label {
 	outline: 2px solid #81b3d2;
@@ -1127,7 +1218,6 @@ body{
   	left: 50%;
   	width: 2px;
   	height: 22px;
-
   	background: #ffffff;
   	-webkit-transform: translate(-50%, -50%);
   	    -ms-transform: translate(-50%, -50%);
@@ -1135,6 +1225,7 @@ body{
 }
 .price-controls label {
 	display: inline-block;
+	vertical-align: middle;
   	font-size: 14px;
   	vertical-align: top;
   	cursor: pointer;
@@ -1161,7 +1252,6 @@ body{
   	height: 2px;
   	background: rgba(255, 255, 255, 0.3);
 }
-
 .range-controls .bar {
   	width: 80%;
   	height: 2px;
@@ -1172,7 +1262,6 @@ body{
   	top: -9px;
  	 width: 4px;
   	height: 4px;
-
   	background: #ababab;
   	border: 8px solid #ffffff;
   	border-radius: 50%;
@@ -1196,12 +1285,10 @@ body{
 	display: block;
   	margin: 0 auto;
   	padding: 6px 35px;
-
   	font-size: 14px;
   	line-height: 20px;
   	color: #ffffff;
   	text-transform: uppercase;
-
   	background: transparent;
   	border: 2px solid #ffffff;
   	border-radius: 2px;
