--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ body {
 	        align-items: center;
 	width: 20%;
 	height: 56px;
+	text-align: center;
 }
 .site-navigation li:first-child,
 .site-navigation li:nth-child(2) {
@@ -99,13 +100,19 @@ body {
 .site-navigation-item:nth-child(3) {
 	margin-left: 20%;
 }
-.site-navigation-item:first-child a, 
-.site-navigation-item:nth-child(2) a {
+.site-navigation-item:first-child, 
+.site-navigation-item:nth-child(2) {
 	padding-left: 72px;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
+	text-align: left;
 }
-.site-navigation-item:nth-child(3) a, 
-.site-navigation-item:last-child a {
+.site-navigation-item:nth-child(3), 
+.site-navigation-item:last-child {
 	padding-right: 72px;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
+	text-align: right;
 }
 .site-navigation-item:last-child a {
 	padding-left: 14px;
